Decipher.output
Grammar

    0 $accept: scdeclaration_unit "end of file"

    1 scdeclaration_unit: /* empty */
    2                   | scdeclarations

    3 scdeclarations: scdeclaration
    4               | TYPE_EXPRESSION type_name
    5               | scdeclaration scdeclarations
    6               | TYPE_EXPRESSION type_name scdeclarations

    7 scdeclaration: declaration_specifiers SEMICOLON
    8              | declaration_specifiers init_declarator_list SEMICOLON

    9 declaration_specifiers: storage_class_specifier
   10                       | storage_class_specifier declaration_specifiers
   11                       | type_specifier
   12                       | type_specifier declaration_specifiers
   13                       | type_qualifier
   14                       | type_qualifier declaration_specifiers

   15 init_declarator_list: init_declarator
   16                     | init_declarator_list COMMA init_declarator

   17 init_declarator: declarator
   18                | declarator EQUALSIGN initializer

   19 storage_class_specifier: TYPEDEF
   20                        | EXTERN
   21                        | STATIC
   22                        | AUTO
   23                        | REGISTER

   24 type_specifier: VOID
   25               | CHAR
   26               | SHORT
   27               | INT
   28               | LONG
   29               | FLOAT
   30               | DOUBLE
   31               | SIGNED
   32               | UNSIGNED
   33               | struct_or_union_specifier
   34               | enum_specifier
   35               | TYPE_NAME

   36 struct_or_union_specifier: struct_or_union qualified_id LBRACE struct_declaration_list RBRACE
   37                          | struct_or_union LBRACE struct_declaration_list RBRACE
   38                          | struct_or_union qualified_id

   39 struct_or_union: STRUCT
   40                | UNION

   41 struct_declaration_list: struct_declaration
   42                        | struct_declaration_list struct_declaration

   43 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

   44 specifier_qualifier_list: type_specifier specifier_qualifier_list
   45                         | type_specifier
   46                         | type_qualifier specifier_qualifier_list
   47                         | type_qualifier

   48 struct_declarator_list: struct_declarator
   49                       | struct_declarator_list COMMA struct_declarator

   50 struct_declarator: declarator
   51                  | COLON constant_expression
   52                  | declarator COLON constant_expression

   53 enum_specifier: ENUM LBRACE enumerator_list RBRACE
   54               | ENUM qualified_id LBRACE enumerator_list RBRACE
   55               | ENUM qualified_id

   56 enumerator_list: enumerator
   57                | enumerator_list COMMA enumerator

   58 enumerator: IDENTIFIER
   59           | IDENTIFIER EQUALSIGN constant_expression

   60 type_qualifier: CONST
   61               | VOLATILE
   62               | IN
   63               | OUT

   64 declarator: pointer direct_declarator
   65           | direct_declarator

   66 direct_declarator: qualified_id
   67                  | LPARENTHESIS declarator RPARENTHESIS
   68                  | direct_declarator LBRACKET constant_expression RBRACKET
   69                  | direct_declarator LBRACKET RBRACKET
   70                  | direct_declarator LPARENTHESIS parameter_type_list RPARENTHESIS
   71                  | direct_declarator LPARENTHESIS RPARENTHESIS

   72 pointer: ASTERISK
   73        | ASTERISK type_qualifier_list
   74        | ASTERISK pointer
   75        | ASTERISK type_qualifier_list pointer

   76 type_qualifier_list: type_qualifier
   77                    | type_qualifier_list type_qualifier

   78 parameter_type_list: parameter_list
   79                    | parameter_list COMMA ELLIPSIS

   80 parameter_list: parameter_declaration
   81               | parameter_list COMMA parameter_declaration

   82 parameter_declaration: declaration_specifiers declarator
   83                      | declaration_specifiers abstract_declarator
   84                      | declaration_specifiers

   85 type_name: specifier_qualifier_list abstract_declarator

   86 abstract_declarator: pointer
   87                    | direct_abstract_declarator
   88                    | pointer direct_abstract_declarator

   89 direct_abstract_declarator: LPARENTHESIS abstract_declarator RPARENTHESIS
   90                           | LBRACKET RBRACKET
   91                           | LBRACKET constant_expression RBRACKET
   92                           | direct_abstract_declarator LBRACKET RBRACKET
   93                           | direct_abstract_declarator LBRACKET constant_expression RBRACKET
   94                           | LPARENTHESIS RPARENTHESIS
   95                           | LPARENTHESIS parameter_type_list RPARENTHESIS
   96                           | direct_abstract_declarator LPARENTHESIS RPARENTHESIS
   97                           | direct_abstract_declarator LPARENTHESIS parameter_type_list RPARENTHESIS

   98 initializer: assignment_expression
   99            | LBRACE initializer_list RBRACE
  100            | LBRACE initializer_list COMMA RBRACE

  101 initializer_list: initializer
  102                 | initializer_list COMMA initializer

  103 qualified_id: IDENTIFIER
  104             | SCOPE_OP IDENTIFIER
  105             | qualified_id SCOPE_OP IDENTIFIER

  106 assignment_expression: CONSTANT_EXPRESSION

  107 constant_expression: CONSTANT_EXPRESSION


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
LEAST (258)
CONSTANT_EXPRESSION (259) 106 107
SEMICOLON (260) 7 8 43
COMMA (261) 16 49 57 79 81 100 102
EQUALSIGN (262) 18 59
LBRACE (263) 36 37 53 54 99 100
RBRACE (264) 36 37 53 54 99 100
COLON (265) 51 52
LPARENTHESIS (266) 67 70 71 89 94 95 96 97
RPARENTHESIS (267) 67 70 71 89 94 95 96 97
LBRACKET (268) 68 69 90 91 92 93
RBRACKET (269) 68 69 90 91 92 93
ASTERISK (270) 72 73 74 75
INT (271) 27
LONG (272) 28
REGISTER (273) 23
FLOAT (274) 29
DOUBLE (275) 30
UNSIGNED (276) 32
SIGNED (277) 31
TYPE_NAME (278) 35
STRUCT (279) 39
IDENTIFIER (280) 58 59 103 104 105
UNION (281) 40
TYPEDEF (282) 19
ENUM (283) 53 54 55
EXTERN (284) 20
STATIC (285) 21
AUTO (286) 22
VOID (287) 24
ELLIPSIS (288) 79
CHAR (289) 25
SHORT (290) 26
TYPE_EXPRESSION (291) 4 6
SCOPE_OP (292) 104 105
OUT (293) 63
IN (294) 62
VOLATILE (295) 61
CONST (296) 60


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
scdeclaration_unit (43)
    on left: 1 2, on right: 0
scdeclarations (44)
    on left: 3 4 5 6, on right: 2 5 6
scdeclaration (45)
    on left: 7 8, on right: 3 5
declaration_specifiers (46)
    on left: 9 10 11 12 13 14, on right: 7 8 10 12 14 82 83 84
init_declarator_list (47)
    on left: 15 16, on right: 8 16
init_declarator (48)
    on left: 17 18, on right: 15 16
storage_class_specifier (49)
    on left: 19 20 21 22 23, on right: 9 10
type_specifier (50)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35, on right: 11 12 44
    45
struct_or_union_specifier (51)
    on left: 36 37 38, on right: 33
struct_or_union (52)
    on left: 39 40, on right: 36 37 38
struct_declaration_list (53)
    on left: 41 42, on right: 36 37 42
struct_declaration (54)
    on left: 43, on right: 41 42
specifier_qualifier_list (55)
    on left: 44 45 46 47, on right: 43 44 46 85
struct_declarator_list (56)
    on left: 48 49, on right: 43 49
struct_declarator (57)
    on left: 50 51 52, on right: 48 49
enum_specifier (58)
    on left: 53 54 55, on right: 34
enumerator_list (59)
    on left: 56 57, on right: 53 54 57
enumerator (60)
    on left: 58 59, on right: 56 57
type_qualifier (61)
    on left: 60 61 62 63, on right: 13 14 46 47 76 77
declarator (62)
    on left: 64 65, on right: 17 18 50 52 67 82
direct_declarator (63)
    on left: 66 67 68 69 70 71, on right: 64 65 68 69 70 71
pointer (64)
    on left: 72 73 74 75, on right: 64 74 75 86 88
type_qualifier_list (65)
    on left: 76 77, on right: 73 75 77
parameter_type_list (66)
    on left: 78 79, on right: 70 95 97
parameter_list (67)
    on left: 80 81, on right: 78 79 81
parameter_declaration (68)
    on left: 82 83 84, on right: 80 81
type_name (69)
    on left: 85, on right: 4 6
abstract_declarator (70)
    on left: 86 87 88, on right: 83 85 89
direct_abstract_declarator (71)
    on left: 89 90 91 92 93 94 95 96 97, on right: 87 88 92 93 96 97
initializer (72)
    on left: 98 99 100, on right: 18 101 102
initializer_list (73)
    on left: 101 102, on right: 99 100 102
qualified_id (74)
    on left: 103 104 105, on right: 36 38 54 55 66 105
assignment_expression (75)
    on left: 106, on right: 98
constant_expression (76)
    on left: 107, on right: 51 52 59 68 91 93


State 0

    0 $accept: . scdeclaration_unit "end of file"

    INT              shift, and go to state 1
    LONG             shift, and go to state 2
    REGISTER         shift, and go to state 3
    FLOAT            shift, and go to state 4
    DOUBLE           shift, and go to state 5
    UNSIGNED         shift, and go to state 6
    SIGNED           shift, and go to state 7
    TYPE_NAME        shift, and go to state 8
    STRUCT           shift, and go to state 9
    UNION            shift, and go to state 10
    TYPEDEF          shift, and go to state 11
    ENUM             shift, and go to state 12
    EXTERN           shift, and go to state 13
    STATIC           shift, and go to state 14
    AUTO             shift, and go to state 15
    VOID             shift, and go to state 16
    CHAR             shift, and go to state 17
    SHORT            shift, and go to state 18
    TYPE_EXPRESSION  shift, and go to state 19
    OUT              shift, and go to state 20
    IN               shift, and go to state 21
    VOLATILE         shift, and go to state 22
    CONST            shift, and go to state 23

    $default  reduce using rule 1 (scdeclaration_unit)

    scdeclaration_unit         go to state 24
    scdeclarations             go to state 25
    scdeclaration              go to state 26
    declaration_specifiers     go to state 27
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33


State 1

   27 type_specifier: INT .

    $default  reduce using rule 27 (type_specifier)


State 2

   28 type_specifier: LONG .

    $default  reduce using rule 28 (type_specifier)


State 3

   23 storage_class_specifier: REGISTER .

    $default  reduce using rule 23 (storage_class_specifier)


State 4

   29 type_specifier: FLOAT .

    $default  reduce using rule 29 (type_specifier)


State 5

   30 type_specifier: DOUBLE .

    $default  reduce using rule 30 (type_specifier)


State 6

   32 type_specifier: UNSIGNED .

    $default  reduce using rule 32 (type_specifier)


State 7

   31 type_specifier: SIGNED .

    $default  reduce using rule 31 (type_specifier)


State 8

   35 type_specifier: TYPE_NAME .

    $default  reduce using rule 35 (type_specifier)


State 9

   39 struct_or_union: STRUCT .

    $default  reduce using rule 39 (struct_or_union)


State 10

   40 struct_or_union: UNION .

    $default  reduce using rule 40 (struct_or_union)


State 11

   19 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 19 (storage_class_specifier)


State 12

   53 enum_specifier: ENUM . LBRACE enumerator_list RBRACE
   54               | ENUM . qualified_id LBRACE enumerator_list RBRACE
   55               | ENUM . qualified_id

    LBRACE      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    SCOPE_OP    shift, and go to state 36

    qualified_id  go to state 37


State 13

   20 storage_class_specifier: EXTERN .

    $default  reduce using rule 20 (storage_class_specifier)


State 14

   21 storage_class_specifier: STATIC .

    $default  reduce using rule 21 (storage_class_specifier)


State 15

   22 storage_class_specifier: AUTO .

    $default  reduce using rule 22 (storage_class_specifier)


State 16

   24 type_specifier: VOID .

    $default  reduce using rule 24 (type_specifier)


State 17

   25 type_specifier: CHAR .

    $default  reduce using rule 25 (type_specifier)


State 18

   26 type_specifier: SHORT .

    $default  reduce using rule 26 (type_specifier)


State 19

    4 scdeclarations: TYPE_EXPRESSION . type_name
    6               | TYPE_EXPRESSION . type_name scdeclarations

    INT        shift, and go to state 1
    LONG       shift, and go to state 2
    FLOAT      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    SIGNED     shift, and go to state 7
    TYPE_NAME  shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNION      shift, and go to state 10
    ENUM       shift, and go to state 12
    VOID       shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    OUT        shift, and go to state 20
    IN         shift, and go to state 21
    VOLATILE   shift, and go to state 22
    CONST      shift, and go to state 23

    type_specifier             go to state 38
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    specifier_qualifier_list   go to state 39
    enum_specifier             go to state 32
    type_qualifier             go to state 40
    type_name                  go to state 41


State 20

   63 type_qualifier: OUT .

    $default  reduce using rule 63 (type_qualifier)


State 21

   62 type_qualifier: IN .

    $default  reduce using rule 62 (type_qualifier)


State 22

   61 type_qualifier: VOLATILE .

    $default  reduce using rule 61 (type_qualifier)


State 23

   60 type_qualifier: CONST .

    $default  reduce using rule 60 (type_qualifier)


State 24

    0 $accept: scdeclaration_unit . "end of file"

    "end of file"  shift, and go to state 42


State 25

    2 scdeclaration_unit: scdeclarations .

    $default  reduce using rule 2 (scdeclaration_unit)


State 26

    3 scdeclarations: scdeclaration .
    5               | scdeclaration . scdeclarations

    INT              shift, and go to state 1
    LONG             shift, and go to state 2
    REGISTER         shift, and go to state 3
    FLOAT            shift, and go to state 4
    DOUBLE           shift, and go to state 5
    UNSIGNED         shift, and go to state 6
    SIGNED           shift, and go to state 7
    TYPE_NAME        shift, and go to state 8
    STRUCT           shift, and go to state 9
    UNION            shift, and go to state 10
    TYPEDEF          shift, and go to state 11
    ENUM             shift, and go to state 12
    EXTERN           shift, and go to state 13
    STATIC           shift, and go to state 14
    AUTO             shift, and go to state 15
    VOID             shift, and go to state 16
    CHAR             shift, and go to state 17
    SHORT            shift, and go to state 18
    TYPE_EXPRESSION  shift, and go to state 19
    OUT              shift, and go to state 20
    IN               shift, and go to state 21
    VOLATILE         shift, and go to state 22
    CONST            shift, and go to state 23

    $default  reduce using rule 3 (scdeclarations)

    scdeclarations             go to state 43
    scdeclaration              go to state 26
    declaration_specifiers     go to state 27
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33


State 27

    7 scdeclaration: declaration_specifiers . SEMICOLON
    8              | declaration_specifiers . init_declarator_list SEMICOLON

    SEMICOLON     shift, and go to state 44
    LPARENTHESIS  shift, and go to state 45
    ASTERISK      shift, and go to state 46
    IDENTIFIER    shift, and go to state 35
    SCOPE_OP      shift, and go to state 36

    init_declarator_list  go to state 47
    init_declarator       go to state 48
    declarator            go to state 49
    direct_declarator     go to state 50
    pointer               go to state 51
    qualified_id          go to state 52


State 28

    9 declaration_specifiers: storage_class_specifier .
   10                       | storage_class_specifier . declaration_specifiers

    INT        shift, and go to state 1
    LONG       shift, and go to state 2
    REGISTER   shift, and go to state 3
    FLOAT      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    SIGNED     shift, and go to state 7
    TYPE_NAME  shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNION      shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    ENUM       shift, and go to state 12
    EXTERN     shift, and go to state 13
    STATIC     shift, and go to state 14
    AUTO       shift, and go to state 15
    VOID       shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    OUT        shift, and go to state 20
    IN         shift, and go to state 21
    VOLATILE   shift, and go to state 22
    CONST      shift, and go to state 23

    $default  reduce using rule 9 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33


State 29

   11 declaration_specifiers: type_specifier .
   12                       | type_specifier . declaration_specifiers

    INT        shift, and go to state 1
    LONG       shift, and go to state 2
    REGISTER   shift, and go to state 3
    FLOAT      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    SIGNED     shift, and go to state 7
    TYPE_NAME  shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNION      shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    ENUM       shift, and go to state 12
    EXTERN     shift, and go to state 13
    STATIC     shift, and go to state 14
    AUTO       shift, and go to state 15
    VOID       shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    OUT        shift, and go to state 20
    IN         shift, and go to state 21
    VOLATILE   shift, and go to state 22
    CONST      shift, and go to state 23

    $default  reduce using rule 11 (declaration_specifiers)

    declaration_specifiers     go to state 54
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33


State 30

   33 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 33 (type_specifier)


State 31

   36 struct_or_union_specifier: struct_or_union . qualified_id LBRACE struct_declaration_list RBRACE
   37                          | struct_or_union . LBRACE struct_declaration_list RBRACE
   38                          | struct_or_union . qualified_id

    LBRACE      shift, and go to state 55
    IDENTIFIER  shift, and go to state 35
    SCOPE_OP    shift, and go to state 36

    qualified_id  go to state 56


State 32

   34 type_specifier: enum_specifier .

    $default  reduce using rule 34 (type_specifier)


State 33

   13 declaration_specifiers: type_qualifier .
   14                       | type_qualifier . declaration_specifiers

    INT        shift, and go to state 1
    LONG       shift, and go to state 2
    REGISTER   shift, and go to state 3
    FLOAT      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    SIGNED     shift, and go to state 7
    TYPE_NAME  shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNION      shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    ENUM       shift, and go to state 12
    EXTERN     shift, and go to state 13
    STATIC     shift, and go to state 14
    AUTO       shift, and go to state 15
    VOID       shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    OUT        shift, and go to state 20
    IN         shift, and go to state 21
    VOLATILE   shift, and go to state 22
    CONST      shift, and go to state 23

    $default  reduce using rule 13 (declaration_specifiers)

    declaration_specifiers     go to state 57
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33


State 34

   53 enum_specifier: ENUM LBRACE . enumerator_list RBRACE

    IDENTIFIER  shift, and go to state 58

    enumerator_list  go to state 59
    enumerator       go to state 60


State 35

  103 qualified_id: IDENTIFIER .

    $default  reduce using rule 103 (qualified_id)


State 36

  104 qualified_id: SCOPE_OP . IDENTIFIER

    IDENTIFIER  shift, and go to state 61


State 37

   54 enum_specifier: ENUM qualified_id . LBRACE enumerator_list RBRACE
   55               | ENUM qualified_id .
  105 qualified_id: qualified_id . SCOPE_OP IDENTIFIER

    LBRACE    shift, and go to state 62
    SCOPE_OP  shift, and go to state 63

    $default  reduce using rule 55 (enum_specifier)


State 38

   44 specifier_qualifier_list: type_specifier . specifier_qualifier_list
   45                         | type_specifier .

    INT        shift, and go to state 1
    LONG       shift, and go to state 2
    FLOAT      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    SIGNED     shift, and go to state 7
    TYPE_NAME  shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNION      shift, and go to state 10
    ENUM       shift, and go to state 12
    VOID       shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    OUT        shift, and go to state 20
    IN         shift, and go to state 21
    VOLATILE   shift, and go to state 22
    CONST      shift, and go to state 23

    $default  reduce using rule 45 (specifier_qualifier_list)

    type_specifier             go to state 38
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    specifier_qualifier_list   go to state 64
    enum_specifier             go to state 32
    type_qualifier             go to state 40


State 39

   85 type_name: specifier_qualifier_list . abstract_declarator

    LPARENTHESIS  shift, and go to state 65
    LBRACKET      shift, and go to state 66
    ASTERISK      shift, and go to state 46

    pointer                     go to state 67
    abstract_declarator         go to state 68
    direct_abstract_declarator  go to state 69


State 40

   46 specifier_qualifier_list: type_qualifier . specifier_qualifier_list
   47                         | type_qualifier .

    INT        shift, and go to state 1
    LONG       shift, and go to state 2
    FLOAT      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    SIGNED     shift, and go to state 7
    TYPE_NAME  shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNION      shift, and go to state 10
    ENUM       shift, and go to state 12
    VOID       shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    OUT        shift, and go to state 20
    IN         shift, and go to state 21
    VOLATILE   shift, and go to state 22
    CONST      shift, and go to state 23

    $default  reduce using rule 47 (specifier_qualifier_list)

    type_specifier             go to state 38
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    specifier_qualifier_list   go to state 70
    enum_specifier             go to state 32
    type_qualifier             go to state 40


State 41

    4 scdeclarations: TYPE_EXPRESSION type_name .
    6               | TYPE_EXPRESSION type_name . scdeclarations

    INT              shift, and go to state 1
    LONG             shift, and go to state 2
    REGISTER         shift, and go to state 3
    FLOAT            shift, and go to state 4
    DOUBLE           shift, and go to state 5
    UNSIGNED         shift, and go to state 6
    SIGNED           shift, and go to state 7
    TYPE_NAME        shift, and go to state 8
    STRUCT           shift, and go to state 9
    UNION            shift, and go to state 10
    TYPEDEF          shift, and go to state 11
    ENUM             shift, and go to state 12
    EXTERN           shift, and go to state 13
    STATIC           shift, and go to state 14
    AUTO             shift, and go to state 15
    VOID             shift, and go to state 16
    CHAR             shift, and go to state 17
    SHORT            shift, and go to state 18
    TYPE_EXPRESSION  shift, and go to state 19
    OUT              shift, and go to state 20
    IN               shift, and go to state 21
    VOLATILE         shift, and go to state 22
    CONST            shift, and go to state 23

    $default  reduce using rule 4 (scdeclarations)

    scdeclarations             go to state 71
    scdeclaration              go to state 26
    declaration_specifiers     go to state 27
    storage_class_specifier    go to state 28
    type_specifier             go to state 29
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    enum_specifier             go to state 32
    type_qualifier             go to state 33


State 42

    0 $accept: scdeclaration_unit "end of file" .

    $default  accept


State 43

    5 scdeclarations: scdeclaration scdeclarations .

    $default  reduce using rule 5 (scdeclarations)


State 44

    7 scdeclaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 7 (scdeclaration)


State 45

   67 direct_declarator: LPARENTHESIS . declarator RPARENTHESIS

    LPARENTHESIS  shift, and go to state 45
    ASTERISK      shift, and go to state 46
    IDENTIFIER    shift, and go to state 35
    SCOPE_OP      shift, and go to state 36

    declarator         go to state 72
    direct_declarator  go to state 50
    pointer            go to state 51
    qualified_id       go to state 52


State 46

   72 pointer: ASTERISK .
   73        | ASTERISK . type_qualifier_list
   74        | ASTERISK . pointer
   75        | ASTERISK . type_qualifier_list pointer

    ASTERISK  shift, and go to state 46
    OUT       shift, and go to state 20
    IN        shift, and go to state 21
    VOLATILE  shift, and go to state 22
    CONST     shift, and go to state 23

    $default  reduce using rule 72 (pointer)

    type_qualifier       go to state 73
    pointer              go to state 74
    type_qualifier_list  go to state 75


State 47

    8 scdeclaration: declaration_specifiers init_declarator_list . SEMICOLON
   16 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 76
    COMMA      shift, and go to state 77


State 48

   15 init_declarator_list: init_declarator .

    $default  reduce using rule 15 (init_declarator_list)


State 49

   17 init_declarator: declarator .
   18                | declarator . EQUALSIGN initializer

    EQUALSIGN  shift, and go to state 78

    $default  reduce using rule 17 (init_declarator)


State 50

   65 declarator: direct_declarator .
   68 direct_declarator: direct_declarator . LBRACKET constant_expression RBRACKET
   69                  | direct_declarator . LBRACKET RBRACKET
   70                  | direct_declarator . LPARENTHESIS parameter_type_list RPARENTHESIS
   71                  | direct_declarator . LPARENTHESIS RPARENTHESIS

    LPARENTHESIS  shift, and go to state 79
    LBRACKET      shift, and go to state 80

    $default  reduce using rule 65 (declarator)


State 51

   64 declarator: pointer . direct_declarator

    LPARENTHESIS  shift, and go to state 45
    IDENTIFIER    shift, and go to state 35
    SCOPE_OP      shift, and go to state 36

    direct_declarator  go to state 81
    qualified_id       go to state 52


State 52

   66 direct_declarator: qualified_id .
  105 qualified_id: qualified_id . SCOPE_OP IDENTIFIER

    SCOPE_OP  shift, and go to state 63

    $default  reduce using rule 66 (direct_declarator)


State 53

   10 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 10 (declaration_specifiers)


State 54

   12 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 12 (declaration_specifiers)


State 55

   37 struct_or_union_specifier: struct_or_union LBRACE . struct_declaration_list RBRACE

    INT        shift, and go to state 1
    LONG       shift, and go to state 2
    FLOAT      shift, and go to state 4
    DOUBLE     shift, and go to state 5
    UNSIGNED   shift, and go to state 6
    SIGNED     shift, and go to state 7
    TYPE_NAME  shift, and go to state 8
    STRUCT     shift, and go to state 9
    UNION      shift, and go to state 10
    ENUM       shift, and go to state 12
    VOID       shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    OUT        shift, and go to state 20
    IN         shift, and go to state 21
    VOLATILE   shift, and go to state 22
    CONST      shift, and go to state 23

    type_specifier             go to state 38
    struct_or_union_specifier  go to state 30
    struct_or_union            go to state 31
    struct_declaration_list    go to state 82
    struct_declaration         go to state 83
    specifier_qualifier_list   go to state 84
    enum_specifier             go to state 32
    type_qualifier             go to state 40


State 56

   36 struct_or_union_specifier: struct_or_union qualified_id . LBRACE struct_declaration_list RBRACE
   38                          | struct_or_union qualified_id .
  105 qualified_id: qualified_id . SCOPE_OP IDENTIFIER

    LBRACE    shift, and go to state 85
    SCOPE_OP  shift, and go to state 63

    $default  reduce using rule 38 (struct_or_union_specifier)


State 57

   14 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 14 (declaration_specifiers)


State 58

   58 enumerator: IDENTIFIER .
   59           | IDENTIFIER . EQUALSIGN constant_expression

    EQUALSIGN  shift, and go to state 86

    $default  reduce using rule 58 (enumerator)


State 59

   53 enum_specifier: ENUM LBRACE enumerator_list . RBRACE
   57 enumerator_list: enumerator_list . COMMA enumerator

    COMMA   shift, and go to state 87
    RBRACE  shift, and go to state 88


State 60

   56 enumerator_list: enumerator .

    $default  reduce using rule 56 (enumerator_list)


State 61

  104 qualified_id: SCOPE_OP IDENTIFIER .

    $default  reduce using rule 104 (qualified_id)


State 62

   54 enum_specifier: ENUM qualified_id LBRACE . enumerator_list RBRACE

    IDENTIFIER  shift, and go to state 58

    enumerator_list  go to state 89
    enumerator       go to state 60


State 63

  105 qualified_id: qualified_id SCOPE_OP . IDENTIFIER

    IDENTIFIER  shift, and go to state 90


State 64

   44 specifier_qualifier_list: type_specifier specifier_qualifier_list .

    $default  reduce using rule 44 (specifier_qualifier_list)


State 65

   89 direct_abstract_declarator: LPARENTHESIS . abstract_declarator RPARENTHESIS
   94                           | LPARENTHESIS . RPARENTHESIS
   95                           | LPARENTHESIS . parameter_type_list RPARENTHESIS

    LPARENTHESIS  shift, and go to state 65
    RPARENTHESIS  shift, and go to state 91
    LBRACKET      shift, and go to state 66
    ASTERISK      shift, and go to state 46
    INT           shift, and go to state 1
    LONG          shift, and go to state 2
    REGISTER      shift, and go to state 3
    FLOAT         shift, and go to state 4
    DOUBLE        shift, and go to state 5
    UNSIGNED      shift, and go to state 6
    SIGNED        shift, and go to state 7
    TYPE_NAME     shift, and go to state 8
    STRUCT        shift, and go to state 9
    UNION         shift, and go to state 10
    TYPEDEF       shift, and go to state 11
    ENUM          shift, and go to state 12
    EXTERN        shift, and go to state 13
    STATIC        shift, and go to state 14
    AUTO          shift, and go to state 15
    VOID          shift, and go to state 16
    CHAR          shift, and go to state 17
    SHORT         shift, and go to state 18
    OUT           shift, and go to state 20
    IN            shift, and go to state 21
    VOLATILE      shift, and go to state 22
    CONST         shift, and go to state 23

    declaration_specifiers      go to state 92
    storage_class_specifier     go to state 28
    type_specifier              go to state 29
    struct_or_union_specifier   go to state 30
    struct_or_union             go to state 31
    enum_specifier              go to state 32
    type_qualifier              go to state 33
    pointer                     go to state 67
    parameter_type_list         go to state 93
    parameter_list              go to state 94
    parameter_declaration       go to state 95
    abstract_declarator         go to state 96
    direct_abstract_declarator  go to state 69


State 66

   90 direct_abstract_declarator: LBRACKET . RBRACKET
   91                           | LBRACKET . constant_expression RBRACKET

    CONSTANT_EXPRESSION  shift, and go to state 97
    RBRACKET             shift, and go to state 98

    constant_expression  go to state 99


State 67

   86 abstract_declarator: pointer .
   88                    | pointer . direct_abstract_declarator

    LPARENTHESIS  shift, and go to state 65
    LBRACKET      shift, and go to state 66

    $default  reduce using rule 86 (abstract_declarator)

    direct_abstract_declarator  go to state 100


State 68

   85 type_name: specifier_qualifier_list abstract_declarator .

    $default  reduce using rule 85 (type_name)


State 69

   87 abstract_declarator: direct_abstract_declarator .
   92 direct_abstract_declarator: direct_abstract_declarator . LBRACKET RBRACKET
   93                           | direct_abstract_declarator . LBRACKET constant_expression RBRACKET
   96                           | direct_abstract_declarator . LPARENTHESIS RPARENTHESIS
   97                           | direct_abstract_declarator . LPARENTHESIS parameter_type_list RPARENTHESIS

    LPARENTHESIS  shift, and go to state 101
    LBRACKET      shift, and go to state 102

    $default  reduce using rule 87 (abstract_declarator)


State 70

   46 specifier_qualifier_list: type_qualifier specifier_qualifier_list .

    $default  reduce using rule 46 (specifier_qualifier_list)


State 71

    6 scdeclarations: TYPE_EXPRESSION type_name scdeclarations .

    $default  reduce using rule 6 (scdeclarations)


State 72

   67 direct_declarator: LPARENTHESIS declarator . RPARENTHESIS

    RPARENTHESIS  shift, and go to state 103


State 73

   76 type_qualifier_list: type_qualifier .

    $default  reduce using rule 76 (type_qualifier_list)


State 74

   74 pointer: ASTERISK pointer .

    $default  reduce using rule 74 (pointer)


State 75

   73 pointer: ASTERISK type_qualifier_list .
   75        | ASTERISK type_qualifier_list . pointer
   77 type_qualifier_list: type_qualifier_list . type_qualifier

    ASTERISK  shift, and go to state 46
    OUT       shift, and go to state 20
    IN        shift, and go to state 21
    VOLATILE  shift, and go to state 22
    CONST     shift, and go to state 23

    $default  reduce using rule 73 (pointer)

    type_qualifier  go to state 104
    pointer         go to state 105


State 76

    8 scdeclaration: declaration_specifiers init_declarator_list SEMICOLON .
